syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.timenow";
option java_outer_classname = "TimeNowProto";

package helloworld;

// The greeting service definition.
service Timer {
  // Sends a greeting
  rpc WhatsTimeNow (WhatsTimeNowRequest) returns (WhatsTimeNowReply) {}
}

// The request message containing the user's name.
message WhatsTimeNowRequest {
}

// The response message containing the greetings
message WhatsTimeNowReply {
  string time = 1;
}
